feat: adding capacitor for mobile apps

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover"
+    />
     <title>SMART Train Schedule</title>
     <meta name="description" content="Modern mobile-friendly SMART train schedule for Sonoma-Marin Area Rail Transit" />
     <meta name="keywords" content="SMART train, schedule, Sonoma, Marin, transit, public transportation" />
