feat: add community disclaimer and GitHub badge

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover"
     />
-    <title>SMART Train Schedule</title>
-    <meta name="description" content="Modern mobile-friendly SMART train schedule for Sonoma-Marin Area Rail Transit" />
+    <title>SMART Train Schedule (Community)</title>
+    <meta name="description" content="Community-built SMART train schedules for Sonoma-Marin Area Rail Transit; not affiliated with SMART." />
     <meta name="keywords" content="SMART train, schedule, Sonoma, Marin, transit, public transportation" />
     <meta name="author" content="SMART Train Schedule Team" />
     
@@ -25,15 +25,15 @@
     <link rel="icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" href="/favicon.ico" />
     <!-- Open Graph -->
-    <meta property="og:title" content="SMART Train Schedule" />
+    <meta property="og:title" content="SMART Train Schedule (Community)" />
     <meta property="og:description"
-      content="View SMART train schedules and ferry connections for Sonoma-Marin Area Rail Transit" />
+      content="Community-built SMART train schedules and ferry connections; not affiliated with SMART." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="/" />
     <!-- Twitter -->
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="SMART Train Schedule" />
-    <meta name="twitter:description" content="View SMART train schedules and ferry connections" />
+    <meta name="twitter:title" content="SMART Train Schedule (Community)" />
+    <meta name="twitter:description" content="Community-built SMART train schedules and ferry connections; not affiliated with SMART." />
   </head>
 
   <body>
