--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <meta name="apple-mobile-web-app-title" content="SMART trip" />
     
     <!-- Favicon and Icons -->
-    <link rel="icon" href="/favicon.ico" />
-    <link rel="apple-touch-icon" href="/favicon.ico" />
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <!-- Open Graph -->
     <meta property="og:title" content="SMART Train Schedule (Community)" />
     <meta property="og:description"
