feat(support): expand support page details and FAQ
- add detailed bug-report guidance and contact info

- document current app capabilities and data accuracy notes

- add common questions section for App Store review clarity

- add shared legal page styles for section dividers and subheadings

--- a/public/support.html
+++ b/public/support.html
@@ -15,27 +15,108 @@
     <main>
       <h1>Support</h1>
       <p>
-        Need help with the SMART Train Schedule app? Contact support and we will
-        help troubleshoot issues, answer questions, and take feedback.
+        Need help with <strong>SMART trip - Community App</strong> (SMART Train
+        Schedule)? We are happy to help troubleshoot issues, answer questions,
+        and collect feedback.
       </p>
+
+      <hr />
 
       <h2>Contact Support</h2>
       <p>
-        Email:
+        <strong>Email:</strong>
         <a href="mailto:smart-train@proton.me">smart-train@proton.me</a>
       </p>
-
-      <h2>What To Include</h2>
+      <p>If you are reporting a bug, please include:</p>
       <ul>
-        <li>Your device model and iOS version</li>
-        <li>Approximate time the problem occurred</li>
-        <li>A short description and screenshot (if available)</li>
+        <li>Your <strong>device model</strong> (for example, iPhone 15 / iPad Air)</li>
+        <li>Your <strong>iOS/iPadOS version</strong></li>
+        <li>The <strong>app version</strong> (for example, 1.2.1)</li>
+        <li>Approximate <strong>time</strong> the problem occurred</li>
+        <li>A short description and <strong>screenshot</strong> (if available)</li>
       </ul>
 
-      <h2>About The App</h2>
+      <hr />
+
+      <h2>What This App Can Do (Current Features)</h2>
+      <ul>
+        <li>
+          <strong>Real-time trip status</strong> on each trip card, including
+          <strong>delay</strong>, <strong>cancellation</strong>, and
+          <strong>skipped-stop</strong> indicators (when available)
+        </li>
+        <li>
+          <strong>In-app service alerts</strong> with an <strong>unread badge</strong> and
+          a slide-in alerts panel
+        </li>
+        <li>
+          <strong>Interactive route planning</strong>: choose departure and arrival stations
+          and <strong>swap</strong> them easily
+        </li>
+        <li>
+          <strong>Ferry connections</strong>: see connecting ferry schedules when traveling
+          to Larkspur
+        </li>
+        <li><strong>Weekday / weekend schedules</strong>: toggle schedule types</li>
+        <li><strong>Next-train highlighting</strong>: quickly spot the next available train</li>
+        <li><strong>Dark mode</strong>: matches system theme (with manual override)</li>
+        <li>
+          <strong>Accessibility</strong>: designed for screen readers and keyboard navigation
+        </li>
+        <li><strong>Bilingual support</strong>: full <strong>English + Spanish</strong> interface</li>
+      </ul>
+
+      <hr />
+
+      <h2>Data Sources and Accuracy</h2>
       <p>
-        SMART Train Schedule is a community-built app and is not affiliated with
-        Sonoma-Marin Area Rail Transit (SMART).
+        This is a community-built app. Schedules and real-time indicators depend
+        on the underlying transit feeds, which can occasionally be delayed or
+        incomplete.
+      </p>
+      <p>
+        If you see something that looks wrong (missing trip, incorrect delay badge,
+        and similar issues), email support with:
+      </p>
+      <ul>
+        <li>station pair (from -&gt; to)</li>
+        <li>the trip time you expected</li>
+        <li>a screenshot (if possible)</li>
+      </ul>
+
+      <hr />
+
+      <h2>Common Questions</h2>
+      <h3>Is this the official SMART app?</h3>
+      <p>
+        No. <strong>SMART trip is not affiliated with Sonoma-Marin Area Rail
+        Transit (SMART).</strong> It is a community project.
+      </p>
+
+      <h3>Why does a trip not show a delay or cancellation?</h3>
+      <p>
+        Real-time info may not be available for every trip at all times. When
+        the feed does not provide it, the app falls back to scheduled times.
+      </p>
+
+      <h3>I got an alert badge. Where do I read it?</h3>
+      <p>
+        Open the <strong>Service Alerts</strong> panel in the app to view unread
+        alerts. Once viewed, the badge count updates.
+      </p>
+
+      <h3>Can you add a feature?</h3>
+      <p>
+        Yes. Email a short request. If it is a bug or issue, include the
+        details listed in the Contact Support section above.
+      </p>
+
+      <hr />
+
+      <h2>About The Project</h2>
+      <p>SMART trip is an open-source, community-built app for SMART riders.</p>
+      <p>
+        <strong>Not affiliated with Sonoma-Marin Area Rail Transit (SMART).</strong>
       </p>
 
       <p class="meta">Last updated: February 28, 2026</p>
